--- a/battleship_ClientView/pom.xml
+++ b/battleship_ClientView/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>21</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE210</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
