--- a/battleship_ClientView/pom.xml
+++ b/battleship_ClientView/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE210</version>
         </dependency>
+        <dependency>
+            <groupId>Dominio</groupId>
+            <artifactId>1</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
