Prueba de juego con maquina basico

--- a/battleship_ClientView/pom.xml
+++ b/battleship_ClientView/pom.xml
@@ -28,9 +28,9 @@
             <version>RELEASE210</version>
         </dependency>
         <dependency>
-            <groupId>Dominio</groupId>
-            <artifactId>1</artifactId>
-            <version>1</version>
+            <groupId>com.mycompany</groupId>
+            <artifactId>BattleShip</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
